_generated-config/1.7/config/quarkus-resteasy.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy_configuration]]link:#quarkus-resteasy_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy.gzip.enabled]]`link:#quarkus-resteasy_quarkus.resteasy.gzip.enabled[quarkus.resteasy.gzip.enabled]`

[.description]
--
If gzip is enabled
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy.gzip.max-input]]`link:#quarkus-resteasy_quarkus.resteasy.gzip.max-input[quarkus.resteasy.gzip.max-input]`

[.description]
--
Maximum deflated file bytes size 
 If the limit is exceeded, Resteasy will return Response with status 413("Request Entity Too Large")
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.security.jaxrs.deny-unannotated-endpoints]]`link:#quarkus-resteasy_quarkus.security.jaxrs.deny-unannotated-endpoints[quarkus.security.jaxrs.deny-unannotated-endpoints]`

[.description]
--
if set to true, access to all JAX-RS resources will be denied by default
--|boolean 
|`false`

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
