_generated-config/2.2/config/quarkus-resteasy.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy_configuration]]link:#quarkus-resteasy_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy.gzip.enabled]]`link:#quarkus-resteasy_quarkus.resteasy.gzip.enabled[quarkus.resteasy.gzip.enabled]`

[.description]
--
If gzip is enabled
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy.gzip.max-input]]`link:#quarkus-resteasy_quarkus.resteasy.gzip.max-input[quarkus.resteasy.gzip.max-input]`

[.description]
--
Maximum deflated file bytes size 
 If the limit is exceeded, Resteasy will return Response with status 413("Request Entity Too Large")
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy-json.json-default]]`link:#quarkus-resteasy_quarkus.resteasy-json.json-default[quarkus.resteasy-json.json-default]`

[.description]
--
If this is true (the default) then JSON is set to the default media type. If a method has no produces/consumes and there is no builtin provider than can handle the type then we will assume the response should be JSON. Note that this will only take effect if a JSON provider has been installed, such as quarkus-resteasy-jsonb or quarkus-resteasy-jackson.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.resteasy.vertx.response-buffer-size]]`link:#quarkus-resteasy_quarkus.resteasy.vertx.response-buffer-size[quarkus.resteasy.vertx.response-buffer-size]`

[.description]
--
The size of the output stream response buffer. If a response is larger than this and no content-length is provided then the request will be chunked. Larger values may give slight performance increases for large responses, at the expense of more memory usage.
--|int 
|`8191`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.security.jaxrs.deny-unannotated-endpoints]]`link:#quarkus-resteasy_quarkus.security.jaxrs.deny-unannotated-endpoints[quarkus.security.jaxrs.deny-unannotated-endpoints]`

[.description]
--
if set to true, access to all JAX-RS resources will be denied by default
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.security.jaxrs.default-roles-allowed]]`link:#quarkus-resteasy_quarkus.security.jaxrs.default-roles-allowed[quarkus.security.jaxrs.default-roles-allowed]`

[.description]
--
If no security annotations are affecting a method then they will default to requiring these roles, (equivalent to adding an @RolesAllowed annotation with the roles to every endpoint class). The role of '++**++' means any authenticated user, which is equivalent to the `io.quarkus.security.Authenticated` annotation.
--|list of string 
|

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
